k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ostadchess-prod
  labels:
    app.kubernetes.io/name: ostadchess
    app.kubernetes.io/environment: prod
